--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,7 +1,24 @@
 *{
     font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
 }
 
-h1 {
-    background: blueviolet;
+body{
+    background-color: #f6f8fc;
+}
+.content {
+    width: 100vw;
+    height: 100vh;
+    padding: 1rem;
+    background-color: #fff;
+}
+
+
+@media screen and (min-width: 992px ) {
+    .content{
+        max-width: 992px;
+        height: auto;
+        margin: 1 rem auto;
+        border-radius: 1rem;
+    }
 }
